--- a/package.json
+++ b/package.json
@@ -27,29 +27,30 @@
         "axios": "^1.7.4",
         "babel-loader": "^9.1.3",
         "browser-sync": "^2.29.3",
+        "concurrently": "^9.0.1",
         "cross-env": "^7.0.3",
         "glob": "^10.4.5",
+        "laravel-vite-plugin": "^1.0",
         "lodash": "^4.17.21",
         "postcss": "^8.4.47",
         "prettier": "3.2.2",
         "resolve-url-loader": "5.0.0",
         "sass": "~1.76.0",
         "sass-loader": "14.0.0",
-        "vite": "^5.3.5",
-        "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^1.0",
-        "tailwindcss": "^3.4.13"
+        "tailwindcss": "^3.4.13",
+        "vite": "^5.3.5"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.7.1",
         "@popperjs/core": "^2.11.8",
         "apexcharts-clevision": "^3.28.5",
         "bootstrap": "~5.3.3",
         "boxicons": "~2.1.4",
         "highlight.js": "~11.9.0",
         "jquery": "~3.7.1",
+        "laravel-vite-plugin": "1.0.1",
         "masonry-layout": "~4.2.2",
-        "perfect-scrollbar": "~1.5.5",
-        "laravel-vite-plugin": "1.0.1"
+        "perfect-scrollbar": "~1.5.5"
     },
     "overrides": {
         "prop-types": "15.8.1"
